fdo#79602: sw: fix text formatting of proportional line space < 100%

SwTxtFormatter::CalcRealHeight(): Apply the special treatment of < 100%
line space shrinking the Height() of the line only to the first line
in a paragraph; the subsequent ones are shrunk again (to the square of
the desired proportion) 30 lines later.

Also set the Ascent of the line, as the wrong base-line causes the lower
part of the line to be clipped.

(regression from 42532d42bfcdb12df86376cda009e8e315a82153)

(cherry picked from commit 4e223fab04279c3583689e69fa1342966e81de36)

Conflicts:
	sw/source/core/text/itrform2.cxx

Change-Id: I0424396263293deaa318c80eedc2237cdb01b22b
Reviewed-on: https://gerrit.libreoffice.org/12156
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>